feat: add bonus stats
